Use translation from both common and user libs in dashboard and contributor
- add and configure ngx-translate-multi-http-loader
- move onboarding translations to user lib

--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -1,4 +1,4 @@
 {
-	"generic.email": "Email",
-	"generic.or": "Ou"
+	"stats.endpoint": "NucliaDB API endpoint",
+	"stats.total_search": "Nombre total de recherches"
 }
