--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -1,5 +1,7 @@
 {
+	"generic.close": "Close",
 	"generic.email": "Email",
+	"generic.logout": "Logout",
 	"generic.or": "Or",
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
 	"login.boarding_title": "Boarding Nuclia",
@@ -40,7 +42,32 @@
 	"login.token_expired": "Token has expired",
 	"login.try_again": "Please try again or reset your password below.",
 	"login.wrong_email": "Wrong email?",
+	"onboarding.account_creation": "Account creation…",
+	"onboarding.company": "What company are you working for?",
 	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
+	"onboarding.get_started": "Get started",
+	"onboarding.host_db": "Will you want to host the database in your infrastructure?",
+	"onboarding.host_db_help": "This does not affect your users experience",
+	"onboarding.host_db_no": "No, I prefer to use Nuclia’s cloud",
+	"onboarding.host_db_yes": "Yes, I will host NucliaDB in my infrastructure",
+	"onboarding.invalid_phone_code": "Invalid code",
+	"onboarding.invalid_phone_number": "Invalid phone number",
+	"onboarding.kb_creation": "Storage creation…",
+	"onboarding.org_size": "How big is your organization?",
+	"onboarding.phone": "Phone number",
+	"onboarding.setting_up": "⏳ ​ We’re setting your account up",
+	"onboarding.setting_up_subtitle": "Your account will be ready in less than a minute! ",
+	"onboarding.storage_zone": "Your data will be hosted in Europe. If you would like your data to be hosted elsewhere, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">fill this form</a>.",
+	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
+	"onboarding.title": "👋​ Welcome to Nuclia!",
+	"onboarding.updates": "Get occasional updates about Nuclia",
+	"onboarding.use_case.ai_training": "AI model training",
+	"onboarding.use_case.global_search": "Global site search",
+	"onboarding.use_case.other": "Other",
+	"onboarding.use_case.research_analysis": "Research & Analysis",
+	"onboarding.use_case.support": "Customer / employee support",
+	"onboarding.use_case.workspace_search": "Workspace Search",
+	"onboarding.use_case_label": "What is your main use case?",
 	"recover.description": "Lost your password? Let’s fix that. Just enter the email address you registered with, and we’ll start the recovery procedure.",
 	"recover.gologin": "Go to the login page",
 	"recover.gologin_help": "Do you remember your password?",
