--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -1,5 +1,7 @@
 {
+	"generic.close": "Cerrar",
 	"generic.email": "Correo electrónico",
+	"generic.logout": "Salir",
 	"generic.or": "O",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.boarding_title": "Embarque Nuclia",
@@ -40,7 +42,32 @@
 	"login.token_expired": "El token ha caducado",
 	"login.try_again": "Vuelva a intentarlo o recupera la contraseña.",
 	"login.wrong_email": "Email incorrecto?",
+	"onboarding.account_creation": "Creación de cuenta…",
+	"onboarding.company": "¿Para qué empresa estás trabajando?",
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
+	"onboarding.get_started": "Empezar",
+	"onboarding.host_db": "¿Querrá alojar la base de datos en su infraestructura?",
+	"onboarding.host_db_help": "Esto no afecta la experiencia de sus usuarios.",
+	"onboarding.host_db_no": "No, prefiero usar la nube de Nuclia",
+	"onboarding.host_db_yes": "Sí, alojaré NucliaDB en mi infraestructura",
+	"onboarding.invalid_phone_code": "Codigo invalido",
+	"onboarding.invalid_phone_number": "Numero de telefono invalido",
+	"onboarding.kb_creation": "Creación de almacenamiento…",
+	"onboarding.org_size": "¿Qué tan grande es su organización?",
+	"onboarding.phone": "Número de teléfono",
+	"onboarding.setting_up": "⏳ ​ Estamos configurando tu cuenta",
+	"onboarding.setting_up_subtitle": "¡Tu cuenta estará lista en menos de un minuto!",
+	"onboarding.storage_zone": "Tus datos estarán alojados en Europa. Si desea que sus datos se alojen en otro lugar, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">complete este formulario</a>.",
+	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
+	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
+	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
+	"onboarding.use_case.ai_training": "Entrenamiento del modelo de IA",
+	"onboarding.use_case.global_search": "Búsqueda global del sitio",
+	"onboarding.use_case.other": "Otros",
+	"onboarding.use_case.research_analysis": "Investigación y análisis",
+	"onboarding.use_case.support": "Asistencia a clientes y empleados",
+	"onboarding.use_case.workspace_search": "Búsqueda de espacio de trabajo",
+	"onboarding.use_case_label": "¿Cuál es su principal caso de uso?",
 	"recover.description": "Escribe tu dirección de correo electrónico y sigue las indicaciones para recuperar la contraseña",
 	"recover.gologin": "Ir a la pagina de login.",
 	"recover.gologin_help": "¿Ya te acuerdas de tu contraseña?",
