--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -1,5 +1,7 @@
 {
+	"generic.close": "Fermer",
 	"generic.email": "Email",
+	"generic.logout": "Déconnexion",
 	"generic.or": "Ou",
 	"login.access_request": "souhaite accéder à Nuclia en votre nom et être en mesure de :",
 	"login.boarding_title": "Embarquer avec Nuclia",
@@ -40,7 +42,32 @@
 	"login.token_expired": "Le token a expiré",
 	"login.try_again": "Veuillez réessayer ou réinitialiser votre mot de passe ci-dessous.",
 	"login.wrong_email": "Email incorrect ?",
+	"onboarding.account_creation": "Création du compte...",
+	"onboarding.company": "Pour quelle entreprise travaillez-vous ?",
 	"onboarding.consent": "En utilisant ce produit, vous acceptez les <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">termes et conditions</a> et <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">politique de confidentialité</a>.",
+	"onboarding.get_started": "Commencer",
+	"onboarding.host_db": "Souhaitez-vous héberger la base de données dans votre infrastructure ?",
+	"onboarding.host_db_help": "Cela n'affecte pas l'expérience de vos utilisateurs",
+	"onboarding.host_db_no": "Non, je préfère utiliser le cloud de Nuclia",
+	"onboarding.host_db_yes": "Oui, j'hébergerai NucliaDB dans mon infrastructure",
+	"onboarding.invalid_phone_code": "Code invalide",
+	"onboarding.invalid_phone_number": "Numéro de téléphone invalide",
+	"onboarding.kb_creation": "Création du stockage…",
+	"onboarding.org_size": "Quelle est la taille de votre organisation ?",
+	"onboarding.phone": "Numéro de téléphone",
+	"onboarding.setting_up": "⏳ ​ Nous configurons votre compte",
+	"onboarding.setting_up_subtitle": "Votre compte sera prêt en moins d'une minute !",
+	"onboarding.storage_zone": "Vos données seront hébergées en Europe. Si vous souhaitez que vos données soient hébergées ailleurs, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">remplissez ce formulaire</a>.",
+	"onboarding.subtitle": "Quelques questions rapides, et nous allons commencer.",
+	"onboarding.title": "👋​ Bienvenue sur Nuclia !",
+	"onboarding.updates": "Recevoir des mises à jour occasionnelles sur Nuclia",
+	"onboarding.use_case.ai_training": "Formation de modèles d'IA",
+	"onboarding.use_case.global_search": "Recherche globale de sites",
+	"onboarding.use_case.other": "Autres",
+	"onboarding.use_case.research_analysis": "Recherche et analyse",
+	"onboarding.use_case.support": "Soutien aux clients / employés",
+	"onboarding.use_case.workspace_search": "Recherche d'espace de travail",
+	"onboarding.use_case_label": "Quel est votre cas d'utilisation principal ?",
 	"recover.description": "Vous avez perdu votre mot de passe ? Nous allons y remédier. Saisissez l'adresse électronique avec laquelle vous vous êtes enregistré et nous lancerons la procédure de récupération.",
 	"recover.gologin": "Aller à la page de connexion",
 	"recover.gologin_help": "Vous vous rappelez de votre mot de passe ?",
