--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -1,5 +1,7 @@
 {
+	"generic.close": "Tancar",
 	"generic.email": "Correu electrònic",
+	"generic.logout": "Sortir",
 	"generic.or": "O",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
 	"login.boarding_title": "Embarcament a Nuclia",
@@ -40,7 +42,32 @@
 	"login.token_expired": "El token ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
 	"login.wrong_email": "Correu electrònic incorrecte?",
+	"onboarding.account_creation": "Creació del compte...",
+	"onboarding.company": "Per a quina empresa treballes?",
 	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
+	"onboarding.get_started": "Començar",
+	"onboarding.host_db": "Voleu allotjar la base de dades a la vostra infraestructura?",
+	"onboarding.host_db_help": "Això no afecta la vostra experiència d'usuari",
+	"onboarding.host_db_no": "No, prefereixo utilitzar el núvol de Nuclia",
+	"onboarding.host_db_yes": "Sí, allotjaré NucliaDB a la meva infraestructura",
+	"onboarding.invalid_phone_code": "Codi invàlid",
+	"onboarding.invalid_phone_number": "Número de telèfon no vàlid",
+	"onboarding.kb_creation": "Creació d'emmagatzematge...",
+	"onboarding.org_size": "Quina mida és la teva organització?",
+	"onboarding.phone": "Número de telèfon",
+	"onboarding.setting_up": "⏳ ​ Estem configurant el teu compte",
+	"onboarding.setting_up_subtitle": "El vostre compte estarà llest en menys d'un minut!",
+	"onboarding.storage_zone": "Les teves dades seran allotjades a Europa. Si voleu que les vostres dades s'allotgin en un altre lloc, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">ompliu aquest formulari</a>.",
+	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
+	"onboarding.title": "👋​ Benvinguts a Nuclia!",
+	"onboarding.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
+	"onboarding.use_case.ai_training": "Entrenament del model d'IA",
+	"onboarding.use_case.global_search": "Cerca global de llocs",
+	"onboarding.use_case.other": "Un altre",
+	"onboarding.use_case.research_analysis": "Recerca i anàlisi",
+	"onboarding.use_case.support": "Suport al client/empleat",
+	"onboarding.use_case.workspace_search": "Cerca d'espais de treball",
+	"onboarding.use_case_label": "Quin és el vostre cas d'ús principal?",
 	"recover.description": "Escriu la teva direcció electrònica i segueix les indicacions per a recuperar la contrasenya ",
 	"recover.gologin": "Vés a la pàgina de login",
 	"recover.gologin_help": "Has recordat la teva contrasenya?",
