Fix translation keys in resource edition flow

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -547,10 +547,10 @@
 	"resource.field-annotation.select-family-before": "Select a family so you can add/edit/remove annotations",
 	"resource.field-classification.help": "Choose a label and then select the paragraphs on which you want it to be applied",
 	"resource.field-conversation": "Conversation Field",
-	"resource.field-file.dropzone": "Drop your file here or click to select it",
-	"resource.field-file.dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
-	"resource.field-file.label": "File Field",
-	"resource.field-file.new-file": "New file:",
+	"resource.field-file": "File Field",
+	"resource.field-file-dropzone": "Drop your file here or click to select it",
+	"resource.field-file-dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
+	"resource.field-file-new-file": "New file:",
 	"resource.field-link": "Link Field",
 	"resource.field-no-paragraph": "No extracted paragraph for this field.",
 	"resource.field-text": "Text Field",
