--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -528,10 +528,10 @@
 	"resource.field-annotation.select-family-before": "Seleccione una familia para que pueda agregar/editar/eliminar anotaciones",
 	"resource.field-classification.help": "Elija una etiqueta y luego seleccione los párrafos en los que desea que se aplique",
 	"resource.field-conversation": "Campo de conversación",
-	"resource.field-file.dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
-	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
-	"resource.field-file.label": "Campo de Archivo",
-	"resource.field-file.new-file": "Archivo nuevo:",
+	"resource.field-file": "Campo de Archivo",
+	"resource.field-file-dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
+	"resource.field-file-dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
+	"resource.field-file-new-file": "Archivo nuevo:",
 	"resource.field-link": "Campo de Enlace",
 	"resource.field-no-paragraph": "No hay párrafo extraído para este campo.",
 	"resource.field-text": "Campo de Texto",
