[sc-6862]: Improve consistency by using default sistema fields
Without external label, we also gain space on the forms.

Done in:
- knowledge-box-settings
- resource edition flow
- user preferences
- account details

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -516,7 +516,7 @@
 	"resource.extra-metadata.invalid-json": "JSON no vàlid",
 	"resource.extra-metadata.label": "Metadades addicionals",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
-	"resource.field.add": "Afegeix un camp",
+	"resource.field.add": "Afegeix a",
 	"resource.field.addition-successful": "El camp s'ha afegit correctament",
 	"resource.field.delete": "Suprimeix el camp",
 	"resource.field.delete-confirm-description": "Confirmeu que voleu suprimir aquest {{type}}?",
