--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -1,4 +1,5 @@
 {
+	"resource.field.add": "Ajouter un",
 	"stash.widgets.displayMetadata.help": "Afficher quelques métadonnées sur les résultats de recherche",
 	"stash.widgets.displayMetadata.label": "Afficher les métadonnées",
 	"stats.endpoint": "NucliaDB API endpoint",
